--- a/Assignment_5/qn3.html
+++ b/Assignment_5/qn3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Gallery</title>
-  <link rel="stylesheet" href="css1.css">
+  <link rel="stylesheet" href="qn3.css">
 </head>
 <body>
   <div class="gallery">
