--- a/Assignment_5/qn13.html
+++ b/Assignment_5/qn13.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3D Rotating Card</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="qn13.css">
 </head>
 <body>
 
